installing the project

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,2 @@
-{% extends "layout.html" %} {% block title %} index {% endblock %} {% block main
-%} {% endblock %}
+{% extends "layout.html" %} {% block title %} index {% endblock %} {% block
+main%} {% endblock %}
