--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,9 @@
-{% extends "layout.html" %} {% block title %} index {% endblock %} {% block
-main%} {% endblock %}
+{% extends "layout.html" %}
+
+{% block title %}
+    index
+{% endblock %}
+
+{% block main %}
+    <a href="{{ url_for('login') }}">Go to Login</a>
+{% endblock %}
