--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Djelouah youcef's portfolio</title>
 
     <!-- importing the font that is called inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,11 +21,11 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/normalize.css') }}"
     />
-    <title>C$50 Finance: {% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <!-- importing our javasctipt -->
-    <script defer src="main.js"></script>
-    {% block head%}{% endblock %}
+    <script defer src="{{ url_for('static', filename='js/main.js') }}"></script>
+    {% block head %}{% endblock %}
   </head>
   <body class="light">
     <nav class="navbar container-fluid">
