--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,6 +1,6 @@
-{% extends "layout.html" %} {% block title %} Log In {% endblock %} {% block
+{% extends "layout.html" %} {% block title %} register {% endblock %} {% block
 main %}
-<form action="/login" method="post">
+<form action="/register" method="post">
   <div>
     <input
       autocomplete="off"
@@ -19,6 +19,14 @@ main %}
       type="password"
     />
   </div>
-  <button type="submit">Log In</button>
+  <div>
+    <input
+      id="confirmation"
+      name="confirmation"
+      placeholder="confirmation"
+      type="password"
+    />
+  </div>
+  <button type="submit">register</button>
 </form>
 {% endblock %}
