--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,6 @@
     index
 {% endblock %}
 
-{% block main %}
-    <a href="{{ url_for('login') }}">Go to Login</a>
+{% block content %}
+    <div class="wrapper"><a href="{{ url_for('login') }}">Go to Login</a></div>
 {% endblock %}
