--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,26 @@
 {% extends "layout.html" %} {% block title %} Log In {% endblock %} {% block
-main %}
-<form action="/login" method="post">
-  <div>
-    <input
-      autocomplete="off"
-      autofocus
-      id="username"
-      name="username"
-      placeholder="Username"
-      type="text"
-    />
+content %}
+<div class="wrapper">
+  <form action="/login" method="post">
+    <div>
+      <input
+        autocomplete="off"
+        autofocus
+        id="username"
+        name="username"
+        placeholder="Username"
+        type="text"
+      />
+    </div>
+    <div>
+      <input
+        id="password"
+        name="password"
+        placeholder="Password"
+        type="password"
+      />
+    </div>
+    <button type="submit">Log In</button>
+    </form>
   </div>
-  <div>
-    <input
-      id="password"
-      name="password"
-      placeholder="Password"
-      type="password"
-    />
-  </div>
-  <button type="submit">Log In</button>
-</form>
 {% endblock %}
