--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,32 +1,34 @@
 {% extends "layout.html" %} {% block title %} register {% endblock %} {% block
-main %}
-<form action="/register" method="post">
-  <div>
-    <input
-      autocomplete="off"
-      autofocus
-      id="username"
-      name="username"
-      placeholder="Username"
-      type="text"
-    />
-  </div>
-  <div>
-    <input
-      id="password"
-      name="password"
-      placeholder="Password"
-      type="password"
-    />
-  </div>
-  <div>
-    <input
-      id="confirmation"
-      name="confirmation"
-      placeholder="confirmation"
-      type="password"
-    />
-  </div>
-  <button type="submit">register</button>
-</form>
+content %}
+<div class="wrapper">
+  <form action="/register" method="post">
+    <div>
+      <input
+        autocomplete="off"
+        autofocus
+        id="username"
+        name="username"
+        placeholder="Username"
+        type="text"
+      />
+    </div>
+    <div>
+      <input
+        id="password"
+        name="password"
+        placeholder="Password"
+        type="password"
+      />
+    </div>
+    <div>
+      <input
+        id="confirmation"
+        name="confirmation"
+        placeholder="confirmation"
+        type="password"
+      />
+    </div>
+    <button type="submit">register</button>
+  </form>
+</div>
 {% endblock %}
