completing the backend of the login and sign_up

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,4 @@
-{% extends "layout.html" %}
-
-{% block title %}
-    index
-{% endblock %}
-
-{% block content %}
-    <div class="wrapper"><a href="{{ url_for('login') }}">Go to Login</a></div>
+{% extends "layout.html" %} {% block title %} index {% endblock %} {% block
+content %}
+<div class="wrapper"><h1>number of people in the gym</h1></div>
 {% endblock %}
