--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -30,8 +30,8 @@
   <body class="light">
     <nav class="navbar container-fluid">
       <ul class="navbar_list glass">
-        <li><a href="{{ url_for('main') }}">main</a></li>
-        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('views.home') }}">main</a></li>
+        <li><a href="{{ url_for('auth.login') }}">Login</a></li>
         <li class="has_dropdown">
           <a id="swatch" href="#">theme</a>
           <!-- <ul class="dropdown ">
@@ -41,12 +41,19 @@
         </li> -->
         </li>
 
-        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
         <li>
-          <a href="{{ url_for('sign_up') }}">sign up</a>
+          <a href="{{ url_for('auth.sign_up') }}">sign up</a>
         </li>
       </ul>
     </nav>
+    #flashing messages {% with messages =
+    get_flashed_messages(with_categories=true) %} {% if messages %} {% for
+    category,message in messages %} {% if category== 'danger' %}
+    <div class="danger">{{message}}</div>
+    {% else %}
+    <div class="success">{{message}}</div>
+    {% endif %} {% endfor %} {% endif %} {% endwith %}
     <main>{% block content %}{% endblock %}</main>
   </body>
 </html>
