the check in and check out from gym

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %} {% block title %} index {% endblock %} {% block
 content %}
-<div class="wrapper"><h1>number of people in the gym</h1></div>
+<div class="wrapper">
+  <h1>number of people in : {{ online_users }}</h1>
+</div>
 {% endblock %}
