--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %} {% block title %} index {% endblock %} {% block
 content %}
 <div class="wrapper">
-  <h1>number of people in : {{ online_users }}</h1>
+  {% if current_user.gym %}
+  <h1>number of people in the gym : {{ online_users }}</h1>
+  {% else %}
+  <h1>you are not logged into a gym please choose a one</h1>
+  {%endif%}
 </div>
 {% endblock %}
