--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,26 +1,18 @@
 {% extends "layout.html" %} {% block title %} Log In {% endblock %} {% block
 content %}
-<div class="wrapper">
-  <form action="{{ url_for('auth.login') }}" method="post">
-    <div>
-      <input
-        autocomplete="off"
-        autofocus
-        id="username"
-        name="username"
-        placeholder="Username"
-        type="text"
-      />
-    </div>
-    <div>
-      <input
-        id="password"
-        name="password"
-        placeholder="Password"
-        type="password"
-      />
-    </div>
-    <button type="submit">Log In</button>
-  </form>
-</div>
+<form action="{{ url_for('auth.login') }}" method="post">
+  <label for="username">Username</label>
+  <input
+    autocomplete="off"
+    autofocus
+    id="username"
+    name="username"
+    placeholder="Username"
+    type="text"
+  />
+  <label for="password">Password</label>
+  <input id="password" name="password" placeholder="Password" type="password" />
+  <label></label>
+  <button type="submit">Log In</button>
+</form>
 {% endblock %}
